# opencv-TP

./: .gitignore  CMakeLists.txt  tp1.cpp
tp1/: CMakeLists.txt  tp1.cpp  videocap.cpp
tp2/: CMakeLists.txt  tp2.cpp
